# CourseTaskTemplate

./: .gitignore  .test.env  pyproject.toml  readme.md
.github/workflows/: checking.yml
src/code/: solution.py
src/grading_system/: engine.py  file_utils.py  gh_utils.py  prompter.py  run.py
src/tests/: test_example.py
